[package]
name = "stable-hash"
version = "0.4.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"


[dependencies]
blake3 = "0.3.3"
num-traits = "0.2.11"
leb128 = "0.2.4"
ibig = "0.3.1"
lazy_static = "1.4.0"
firestorm = "0.4.6"
siphasher = "0.3.7"
metrohash = "1.0.6"
xxhash-rust = {version="0.8.2", features=["xxh3"]}
t1ha = "0.1.0"

[dev-dependencies]
hex = "0.4.2"
rand = "0.8.4"
