[package]
name = "stable-hash"
version = "0.4.4"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2021"
description = "A stable, structured hash with backward compatibility"
license = "MIT"


[dependencies]
blake3 = "1.5.4"
num-traits = "0.2.16"
leb128 = "0.2.4"
ibig = "0.3.5"
lazy_static = "1.4.0"
firestorm = "0.5.0"
xxhash-rust = {version="0.8.2", features=["xxh3"]}
uint = "0.10.0"

[dev-dependencies]
hex = "0.4.2"
rand = "0.8.4"
gcd = "2.1.0"
